# frogram

./: README.md  frogram.py  install.sh  pyproject.toml
frogram/: __init__.py  frogram.py
frogram.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
